<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditSmartphoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/smartphoneEditTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_smartphone_data"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:paddingTop="0dp"
            android:paddingBottom="28dp"
            android:gravity="center_vertical|start"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smartphone_model_name_edit"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTxt_smartphone_model_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_smartphone_model_name"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smartphone_price_edit"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/editTxt_smartphone_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_smartphone_price"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smartphone_serial_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"/>

        <Spinner
            android:id="@+id/spinner_smartphone_serial_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/select_serial_type"
            android:importantForAccessibility="yes"
            android:labelFor="@id/spinner_smartphone_serial_type"
            android:minHeight="48dp"
            android:padding="12dp"
            android:prompt="@string/select_serial_type"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_edit_smartphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/save_changes_edit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/purple_500"
            android:padding="16dp"
            android:gravity="center"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>